-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9.1
-
None
-
-
32756f721 (dev), f2792069f (6.10), e4e4f4d40 (6.9), 8d54d53c2 (tqtc/lts-6.8)
The unit test file1 works with Qt 6.9.0 but with Qt 6.9.1 the last lines fails.
While creating this minimal example I noted, that test2 fails with both versions.
This Situation is the same on FreeBSD but I was not able to select it in "Platform/s".
void file1() { QTemporaryFile tmp; QVERIFY(!tmp.exists()); QVERIFY(tmp.open()); QVERIFY(tmp.exists()); tmp.close(); QVERIFY(tmp.exists()); QFile::remove(QFileInfo(tmp).absoluteFilePath()); QVERIFY(!tmp.exists()); } void file2() { QTemporaryFile tmp; QVERIFY(!tmp.exists()); QVERIFY(tmp.open()); QVERIFY(tmp.exists()); tmp.close(); QVERIFY(tmp.exists()); QVERIFY(tmp.remove()); QVERIFY(!tmp.exists()); }