QFileSystemEngine/Unix: avoid removing WasDeletedFlag

As the comment says, the flag can only come from a prior call that used
fstat() on the file descriptor, so don't remove it when we couldn't have
added it in the first place.

Pick-to: 6.8
Fixes: QTBUG-137438
Change-Id: Ia75e29d28665c334dea6fffdb498a99c416bc3ac
Reviewed-by: Lars Schmertmann <SmallLars@t-online.de>
Reviewed-by: Ahmad Samir <a.samirh78@gmail.com>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
(cherry picked from commit 32756f7213d53a397eadc0773c34767cdc718845)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit f2792069fe92c4a014af99259fe9b388a3746f7c)